[tool.poetry]
name = "gea-gqap-adaptive-deduplication"
version = "0.1.0"
description = "Genetic Engineering Algorithm for GQAP with adaptive deduplication"
authors = ["nalebedev"]
packages = [
    { include = "src", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=1.23"
pandas = ">=1.5"
openpyxl = ">=3.0"
matplotlib = "^3.6"
black = "^26.3.1"
isort = "^8.0.1"
numba = "^0.65.1"
scipy = "^1.17.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
